--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.2",
+    "mongoose-session-store": "^0.0.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
