--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.6",
@@ -21,6 +22,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
+    "flash": "^1.1.0",
     "mongoose": "^6.7.2",
     "mongoose-session-store": "^0.0.3",
     "passport": "^0.6.0",
